--- a/about.html
+++ b/about.html
@@ -63,21 +63,33 @@
         mainTag.innerHTML = mainTag.innerHTML + card3String;
       </script>
     </main>
-    <footer style="text-align: center; color: indianred">
-      <form>
-        <p>Rate this spot</p>
-        <input id="1 star" type="radio" name="stars" /><label for="1star"
-          >1star</label
-        >
-        <input id="2 star" type="radio" name="stars" /><label for="2star"
-          >2star</label
-        >
-        <input id="3 star" type="radio" name="stars" /><label for="3star"
-          >3star</label
-        >
-      </form>
+    <div border-3 border-bottom border-primary>
+      <footer class="container pt-1 border-3 border-bottom border-primary">
+        <h4 class="container text-center bg-dark border-3 border-bottom border-primary text-success">What our customers say:</h4>
+        <div class="container bg-dark">
+          <div class="row">
+            <div class="col bg-info border border-primary rounded m-2 ">
+              <p class="text-center m-2 text-success"><i>"Paradise Parkers exceeded our expectations"</i></p>
+              <p class="text-center m-2 text-success"><i>"Pardise Parkers is the best"</i></p>
+              <p class="text-center m-2 text-success"><i>"We love Paradise Parkers"</i></p>
+            </div>
+          </div>
+        </div>
+    <div class="container border-3 border-bottom border-primary">
       <br />
-      Websyte Lyte
-    </footer>
+      <h4 class="text-secondary border-3 border-info border-rounded text-center pt-2">Quick Links</h4>
+      <div class="list-group ms-3 me-3 text-center border-3 border-bottom border-info">
+        <div><a href="index.html">Home</a></li>
+          <div><a href="about.html">About</a></li>
+            <div><a href="contact.html">Contact</a></li>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="text-center text-white bg-dark border-3 border-bottom border-info">
+      <p mt-3>&copy; 2023 Paradise Parkers All rights reserved.</p>
+    </div>
+     </footer>
   </body>
 </html>
