--- a/index.html
+++ b/index.html
@@ -195,14 +195,23 @@
           </div>
         </div>
       </div>
-      
-      <h3>Meet Our Newest Team Member</h3>
-      <p>
-        Join us in welcoming Keroppi, our new parking guru! He is ready to take parking to the next level.
-      </p>
-      <img
-        src="https://cdn.glitch.global/f5a336da-c7a4-443f-8539-b17e25543383/keroppi.jpg?v=1726599457888"
-      />
+      <div class="container text-center border border-bottom">
+        <h3>Meet Our Newest Team Member</h3>Join us in welcoming Keroppi,<br> our new parking guru!<br> He is ready to take parking to the next level. <br>
+        <div class="alert alert-primary alert-dismissible" role="alert" data-bs-dismiss="alert" style="border: border-dark">
+          <span class="spinner-grow text-dark border border-top border-4 border-primary"></span>
+          <div class="container text-center text-white rounded border-top bg-secondary"><p class="border border-black bg-dark">Click his foot for location options</p></div>
+          <button class="btn-close bg-info border border-dark" data-bs-dismiss="alert"></button>
+        </div>
+      </div>
+      <h3>Hop to your spot</h3>
+      <img usemap="#map" src="keroppi.jpg" alt="Keroppi">
+      <map name="map">
+        <area
+        title="tippy toes"
+        coords="161,218, 115"
+        shape="circle"
+        href="map.html">
+        </map>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Yes he is a<span class="badge bg-success">FROG</span>
         </li>
